--- a/package.json
+++ b/package.json
@@ -142,8 +142,6 @@
     "react-chartjs": "^0.7.3",
     "react-dnd": "^2.1.2",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^0.14.3",
-    "react-router": "^1.0.1",
     "react-tag-input": "^2.2.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.2",
@@ -154,6 +152,9 @@
     "redux-devtools-log-monitor": "^1.0.1",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.0.0",
+    "shipit-deploy": "^2.0.0",
+    "shipit-npm": "^0.2.0",
+    "shipit-shared": "^4.1.6",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
