--- a/package.json
+++ b/package.json
@@ -64,49 +64,21 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
-    "debug": "^2.2.0",
-    "history": "^2.0.0",
-    "immutable": "^3.7.6",
-    "koa": "^2.0.0-alpha.3",
-    "koa-connect-history-api-fallback": "^0.3.0",
-    "koa-convert": "^1.2.0",
-    "koa-proxy": "^0.5.0",
-    "koa-static": "^2.0.0",
-    "react": "^0.14.0",
-    "react-chartjs": "^0.7.3",
-    "react-dom": "^0.14.0",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0",
-    "react-tag-input": "^2.2.4",
-    "redux": "^3.0.0",
-    "redux-thunk": "^2.0.0"
-  },
-  "devDependencies": {
     "axios": "^0.8.1",
     "babel-cli": "^6.5.1",
     "babel-core": "^6.3.17",
     "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.0",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-transform-react-constant-elements": "^6.5.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.2",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.3.13",
-    "babel-runtime": "^6.3.19",
     "better-npm-run": "0.0.8",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
-    "chai-enzyme": "^0.4.0",
     "chart.js": "^1.0.2",
-    "cheerio": "^0.20.0",
-    "codecov": "^1.0.1",
+    "chartjs": "^0.3.7",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
-    "enzyme": "^2.0.0",
+    "debug": "^2.2.0",
     "eslint": "^2.4.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-config-standard-react": "^2.2.0",
@@ -117,11 +89,45 @@
     "eslint-plugin-react": "^4.0.0",
     "eslint-plugin-standard": "^1.3.1",
     "extract-text-webpack-plugin": "^1.0.0",
+    "fs-extra": "^0.26.3",
+    "history": "^2.0.0",
+    "html-webpack-plugin": "^2.7.1",
+    "immutable": "^3.7.6",
+    "koa": "^2.0.0-alpha.3",
+    "koa-connect-history-api-fallback": "^0.3.0",
+    "koa-convert": "^1.2.0",
+    "koa-proxy": "^0.5.0",
+    "koa-static": "^2.0.0",
+    "lodash": "^4.5.0",
+    "node-sass": "^3.3.3",
+    "postcss-loader": "^0.8.0",
+    "react": "^0.14.0",
+    "react-chartjs": "^0.7.3",
+    "react-dom": "^0.14.0",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^4.0.0",
+    "react-tag-input": "^2.2.4",
+    "redux": "^3.0.0",
+    "redux-thunk": "^2.0.0",
+    "sass-loader": "^3.0.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14"
+  },
+  "devDependencies": {
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-react-constant-elements": "^6.5.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.2",
+    "babel-register": "^6.3.13",
+    "chai": "^3.4.1",
+    "chai-as-promised": "^5.1.0",
+    "chai-enzyme": "^0.4.0",
+    "cheerio": "^0.20.0",
+    "codecov": "^1.0.1",
+    "enzyme": "^2.0.0",
     "file-loader": "^0.8.4",
     "flow-bin": "0.22.1",
     "flow-interfaces": "^0.4.0",
-    "fs-extra": "^0.26.3",
-    "html-webpack-plugin": "^2.7.1",
     "imports-loader": "^0.6.5",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
@@ -131,13 +137,10 @@
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack-with-fast-source-maps": "^1.9.2",
-    "lodash": "^4.5.0",
     "mocha": "^2.2.5",
-    "node-sass": "^3.3.3",
     "nodemon": "^1.8.1",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.3",
-    "postcss-loader": "^0.8.0",
     "react-addons-test-utils": "^0.14.0",
     "react-dnd": "^2.1.2",
     "react-dnd-html5-backend": "^2.1.2",
@@ -149,15 +152,12 @@
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.1",
     "rimraf": "^2.5.1",
-    "sass-loader": "^3.0.0",
     "shipit-deploy": "^2.0.0",
     "shipit-npm": "^0.2.0",
     "shipit-shared": "^4.1.6",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
     "yargs": "^4.0.0"
